[gd_scene load_steps=3 format=2]

[ext_resource path="res://Graphic/Ships/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0.0625, 0.0625 )
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
SPEED = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 1, -13.875, 1, -13.125, 2.0625, -12.1875, 3.875, -11.1875, 3.875, -9.0625, 4, -8.375, 6.75, -7.125, 5.9375, -5.3125, -4.0625, -5.0625, -9, -3, -16.0625, -1.0625, -16.1875, -0.125, -10.125, 1.0625, -8.8125, 2, -4.1875, 3.9375, 5.6875, 4.125, 4.0625, 6.9375, 4.1875, 8.1875, 4.0625, 10.0625, 2.1875, 11.0625, 1.25, 12.0625, 1, 12.9375, 1.9375, 14.0625, 3.9375, 14.875, 12.6875, 14.875, 14.875, 14, 15.9375, 13, 15.9375, 12.0625, 14.9375, 11.125, 12.9375, 10.0625, 10.875, 8.8125, 11.75, 8.0625, 13, 4.9375, 13.75, 3.875, 14, 3.8125, 13.9375, -5, 12.9375, -6, 12.0625, -8.0625, 11.9375, -8.8125, 12.8125, -10.9375, 14.875, -11.9375, 15.875, -13, 15.9375, -14.0625, 15.1875, -14.8125, 12.8125, -16.1875, 4.0625, -16.0625, 2.1875, -14.9375 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PoolVector2Array( 1, -13.875, 1, -13.125, 2.0625, -12.1875, 3.875, -11.1875, 3.875, -9.0625, 4, -8.375, 6.75, -7.125, 5.9375, -5.3125, -4.0625, -5.0625, -9, -3, -16.0625, -1.0625, -16.1875, -0.125, -10.125, 1.0625, -8.8125, 2, -4.1875, 3.9375, 5.6875, 4.125, 4.0625, 6.9375, 4.1875, 8.1875, 4.0625, 10.0625, 2.1875, 11.0625, 1.25, 12.0625, 1, 12.9375, 1.9375, 14.0625, 3.9375, 14.875, 12.6875, 14.875, 14.875, 14, 15.9375, 13, 15.9375, 12.0625, 14.9375, 11.125, 12.9375, 10.0625, 10.875, 8.8125, 11.75, 8.0625, 13, 4.9375, 13.75, 3.875, 14, 3.8125, 13.9375, -5, 12.9375, -6, 12.0625, -8.0625, 11.9375, -8.8125, 12.8125, -10.9375, 14.875, -11.9375, 15.875, -13, 15.9375, -14.0625, 15.1875, -14.8125, 12.8125, -16.1875, 4.0625, -16.0625, 2.1875, -14.9375 )

[node name="ship_small_red23" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="queue_free"]
